# npm_visual

./: .envExample  .flaskenv  .gitignore  README.md  app.py  config.py  main.py  old.main.py  output1.json  package-lock.json  package.json  poetry.toml  pyproject.toml  pyrightconfig.json  requirements.md  requirements.txt  security.md  settings.py
Scrapper/: npm_scrapper.py
app/: Readme.md  __init__.py
app/main/: routes.py
app/utils/: package.py  utils.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  query.ts
log_config/: change_config.py
npm_visual/: __init__.py
npmvisual/: Readme.md  __init__.py  __init__2.py  __init__old.py  analyzer.py  cache.py  commonpackages.py  data_for_frontend.py  data_master.py  db.py  graph.py  package.py  scraper.py  utils.py
npmvisual/_models/: __init__.py  dependency.py  interfaces.d.ts  neomodel_connection_test.py  ns_base_model.py  ns_pretty_printable.py  package.py  packageNode.py  packageOld.py  package_version.py  packument.py
npmvisual/data/: __init__.py  alias_generator.py  cache.py  database.py  db.py  db_dependency.py  db_package.py  dependency.py  main.py  models.py  nstypedata.txt  package.py  routes.py  scraper.py  type_analyzer.py
npmvisual/extensions/: __init__.py  flask_Native_Neo4j.py  flask_db.py  neo4j_connection.py  neo4j_db.py
npmvisual/migrations/: __init__.py  main.py  mig_func_never_edit.py  migration_functions.py  migrations.py  update_neo4j_schema.py
utils/: utils.py
(+25 files in other folders)
