[tool.poetry]
name = "npmvisual"
version = "0.1.0"
description = ""
authors = ["Nicholas Stafford <ngstafford1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
numpy = "^2.1.1"
networkx = "^3.3"
pandas = "^2.2.2"
Flask = "^3.0.3"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
matplotlib = "^3.9.2"
py2neo = "^2021.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
# select = ["ALL"] # Only uncomment if we want to get pedantic
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
quote-style = "double"
